# CATERPillar

./: .gitignore  CMakeLists.txt  config_notes.txt  example_config.json  final_2.csv  old_final.csv  old_old_final.csv
src/: axongammadistribution.cpp  core_logic.cpp  core_logic.h  main_cli.cpp
src/gpu_stuff/: README_2.md  final (9).csv  gpu_blood_vessels.cu  gpu_blood_vessels.h  gpu_candidate_generation.cu  gpu_candidate_generation.h  gpu_candidate_selection.cu  gpu_candidate_selection.h  gpu_collision_check.cu  gpu_collision_check.h  gpu_commit.cu  gpu_commit.h  gpu_in_box.cu  gpu_in_box.h  gpu_init.cu  gpu_init.h  gpu_launch_config.h  gpu_object_types.h  gpu_parameters.h  gpu_runner.cu  gpu_runner.h  gpu_simulation_state.cu  gpu_simulation_state.h  gpu_spatial_grid.cu  gpu_spatial_grid.h  gpu_util.cu  gpu_util.cuh  gpu_util.h  temp_viewer.py
